--- a/dependent-sum-template.cabal
+++ b/dependent-sum-template.cabal
@@ -22,6 +22,7 @@ tested-with:            GHC == 8.0.2,
                         GHC == 9.0.1
 
 extra-source-files:     ChangeLog.md
+                      , ReadMe.md
 
 source-repository head
   type: git
