--- a/dependent-sum-template.cabal
+++ b/dependent-sum-template.cabal
@@ -40,8 +40,8 @@ Library
                         some >= 1.0.1 && < 1.1,
                         containers >= 0.5.9.2,
                         mtl,
-                        template-haskell,
-                        th-abstraction >= 0.4
+                        template-haskell >=2.11 && <2.21,
+                        th-abstraction >= 0.4 && < 0.5
 
 test-suite test
   if impl(ghc < 8.0)
