--- a/dependent-sum-template.cabal
+++ b/dependent-sum-template.cabal
@@ -35,7 +35,7 @@ Library
   default-language:     Haskell2010
   exposed-modules:      Data.GADT.Compare.TH
                         Data.GADT.Show.TH
-  other-modules:        Data.Dependent.Sum.TH.Internal
+  other-modules:        Data.GADT.TH.Internal
                         Data.GADT.Compare.Monad
   build-depends:        base >= 3 && <5,
                         some >= 1.0.1 && < 1.1,
